force-app/main/default/objects/My_Accounts__c/My_Accounts__c.object-meta.xml
<CustomObject>
    <label>My Accounts</label>
    <nameField>
        <label>Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>