force-app/main/default/objects/My_Accounts__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>