force-app/main/default/objects/My_Accounts__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <defaultValue>&quot;IFSCCODE12&quot;</defaultValue>
    <label>IFSC Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>