force-app/main/default/objects/My_Accounts__c/fields/My_Customers__c.field-meta.xml
<CustomField>
    <fullName>My_Customers__c</fullName>
    <label>My Customers</label>
    <referenceTo>My_Customers__c</referenceTo>
    <relationshipLabel>My Accounts</relationshipLabel>
    <relationshipName>My_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>