force-app/main/default/objects/My_Accounts__c/fields/Total_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposits__c</fullName>
    <defaultValue>00</defaultValue>
    <label>Total Deposits</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>