force-app/main/default/objects/My_Accounts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Balance__c</columns>
    <columns>IFSC_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>My_Customers__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>